--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
         "beautify": "prettier --write ."
     },
     "dependencies": {
+        "@hookform/resolvers": "^2.9.10",
         "cookie": "^0.5.0",
         "next": "13.0.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.40.0",
+        "react-icons": "^4.7.1",
+        "sweetalert2": "^11.6.15",
+        "sweetalert2-react-content": "^5.0.7",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/cookie": "^0.5.1",
