--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.40.0",
         "react-icons": "^4.7.1",
+        "react-input-mask": "^3.0.0-alpha.2",
         "sweetalert2": "^11.6.15",
         "sweetalert2-react-content": "^5.0.7",
         "yup": "^0.32.11"
@@ -26,6 +27,7 @@
         "@types/node": "18.11.7",
         "@types/react": "18.0.23",
         "@types/react-dom": "18.0.7",
+        "@types/react-input-mask": "^3.0.2",
         "@typescript-eslint/eslint-plugin": "^5.41.0",
         "autoprefixer": "^10.4.12",
         "eslint": "8.26.0",
