--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-hook-form": "^7.40.0",
         "react-icons": "^4.7.1",
         "react-input-mask": "^3.0.0-alpha.2",
+        "react-select": "^5.7.0",
         "sweetalert2": "^11.6.15",
         "sweetalert2-react-content": "^5.0.7",
         "yup": "^0.32.11"
