--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@hookform/resolvers": "^2.9.10",
         "cookie": "^0.5.0",
+        "lodash": "^4.17.21",
         "next": "13.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
