--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
     "tabWidth": 4,
     "useTabs": false,
     "jsxSingleQuote": true,
-    "singleAttributePerLine": true
+    "singleAttributePerLine": true,
+    "printWidth": 120
 }
