--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "beautify": "prettier --write ."
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.4",
         "@hookform/resolvers": "^2.9.10",
         "cookie": "^0.5.0",
         "lodash": "^4.17.21",
